@@ -118,7 +118,22 @@ class Bailador::App does Bailador::Routing {
             unless %found-head{ $key }:exists {
                 my $code       = sub (Match $match) {
                     my $result = $orig-route.execute($match);
-                    $.context.autorender  = False;
+                    if $result ~~ Bool {
+                        # no need to render for a route that defines access
+                        return $result;
+                    }
+                    if $.context.autorender {
+                        # no rendering happend so far
+                        self.render(content => '');
+                    } else {
+                        # rendering happend so far
+                        # keep statuscode, content-type but discard content
+                        self.render(
+                            status  => self.response.code,
+                            type    => self.response.headers<Content-Type> // '',
+                            content => '',
+                        );
+                    }
                     # return the old result, because if boolean this is important for route dispatching
                     return $result;
                 };
@@ -129,28 +144,35 @@ class Bailador::App does Bailador::Routing {
         }
     }
 
-
-    multi method render($result) {
-        if $result ~~ IO::Path {
-            my $type = $.content-types.detect-type($result);
-            self.render: content => $result.slurp(:bin), :$type;
-        }
-        else {
-            self.render(content => $result);
-        }
+    multi method render($content) {
+        self.render( content => $content );
     }
 
-    multi method render(Int :$status, Str :$type, :$content!) {
+    multi method render(Int :$status, Str :$type is copy, :$content is copy) {
+
+        # already set type manually, this type always wins
+        $type = self.response.headers<Content-Type> if ! $type.defined and self.response.headers<Content-Type>:exists;
+        if $content ~~ IO::Path {
+            my $fallback = self.config.file-discovery-content-type;
+            my $detected = $.content-types.detect-type($content, $fallback);
+            $type        = $detected if !$type.defined and $detected;
+            $content     = $content.slurp(:bin);
+        }
+
+        $type = self.config.default-content-type unless $type.defined;
+
+        # set values
         $.context.autorender = False;
-        self.response.code = $status if $status;
-        self.response.headers<Content-Type> = $type if $type;
-        self.response.content = $content;
+        self.response.code = $status                if $status;
+        self.response.headers<Content-Type> = $type if $type; # and $content.defined maybe?
+        self.response.content = $content            if $content;
     }
 
-    method redirect(Str $location, Int $code = 302) {
-        $.context.autorender = False;
-        self.response.code = $code;
+    method redirect(Str $location, Int $status = 302) {
         self.response.headers<Location> = $location;
+        self.render(:$status, content => '', type => '');
+        # $.context.autorender = False;
+        # self.response.code = $code;
     }
 
     method add_error(Pair $x) {
